# content-linter

./: Gemfile  README.md  _config.yml  action.yml  ai-agents-training.markdown  index.markdown  pyproject.toml
.github/: content_linter.py
.github/scripts/: content_linter.py  keywords.txt
.github/workflows/: content-linter.yml  jekyll.yml
_data/: pain_points.yml  projects.yml  services.yml  tools.yml
_layouts/: defult.html  home.html  post.html
_plugins/: posthog.rb  require_base64.rb
_posts/: 2025-03-06-Measurable-guerrilla-marketing.markdown  2025-03-10-First-steps-in-AI-search-optmization copy.markdown  2025-03-10-First-steps-in-AI-search-optmization.markdown  2025-03-12-Content-validator-linter-as-github-actions.markdown  2025-03-14-Building-a-finance-app-with-ai-code-builder.markdown  2025-03-22-Building-a-finance-app-with-ai-code-builder.markdown  2025-03-23-go-t-market-shifting-focus.markdown
content_linter/: __init__.py  cli.py
